app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: common-wallet-service
spec:
  type: NodePort
  selector:
    run: common-wallet-app
  ports:
  - nodePort: 31000
    port: 8080
    targetPort: 8080
