ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: common-wallet-app-ingress
spec:
  backend:
    serviceName:  common-wallet-service
    servicePort: 8080
